--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -37,6 +37,7 @@ libview/ev-view.c
 shell/eggfindbar.c
 shell/ev-annotation-properties-dialog.c
 shell/ev-application.c
+shell/ev-dualscreen.c
 shell/ev-history.c
 shell/ev-keyring.c
 shell/ev-navigation-action.c
