[shell] dualscreen timer widget

--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -59,6 +59,9 @@ evince_SOURCES=				\
 	ev-navigation-action-widget.h	\
 	ev-password-view.h		\
 	ev-password-view.c		\
+	ev-media-player-keys.h		\
+	ev-presentation-timer.h		\
+	ev-presentation-timer.c		\
 	ev-progress-message-area.h	\
 	ev-progress-message-area.c	\
 	ev-properties-dialog.c		\
